<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="title_activity_main">MainActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_notify">通知</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="hello_world">Hello world!</string>
    <!-- TODO: check upper strings whether to delete -->
    <!-- start here -->
    <string name="app_name">ROSApp</string>
    <string name="activity_main_exit">再次点击退出程序</string>
    <string name="search_hint">搜索站点</string>
    <string name="title_activity_searchable">SearchableActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="origin">起点</string>
    <string name="terminal">终点</string>
    <string name="station_input">输入站点</string>
    <string name="not_login">未登录</string>
    <string name="login">登陆</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="cancel">取消</string>
    <string name="ok">确定</string>
    <string name="home">首页</string>
    <string name="history">历史</string>
    <string name="history_records">历史记录</string>
    <string name="monitor">监控</string>
    <string name="logoff">登出</string>
    <string name="title_activity_acount">AcountActivity</string>
    <string name="action_settings">Settings</string>
    <string name="travelling_suggestion">行程推荐</string>
    <string name="travel_start_time">到站时间: </string>
    <string name="travel_arrival_time">到达时间: </string>
    <string name="travel_narrow_state">车辆状态: </string>
    <string name="book_confirm">确定预定？</string>
    <string name="book_succeed">预定成功</string>

</resources>
