<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    tools:context="app.ros.com.rosapp.view.activity.SearchableActivity">

    <include layout="@layout/searchable"/>

    <LinearLayout
        android:id="@+id/search_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:background="@color/little_white">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textSize="18sp"
                android:text="@string/origin"/>
            <AutoCompleteTextView
                android:id="@+id/origin_text"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:padding="4dp"
                android:layout_gravity="center_vertical"
                android:background="@xml/edit_text_bg"
                android:singleLine="true"
                android:hint="@string/station_input"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textSize="18sp"
                android:text="@string/terminal"/>
            <AutoCompleteTextView
                android:id="@+id/terminal_text"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:padding="4dp"
                android:layout_gravity="center_vertical"
                android:background="@xml/edit_text_bg"
                android:singleLine="true"
                android:hint="@string/station_input"/>
        </LinearLayout>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <app.ros.com.rosapp.view.customized.ROSView
            android:id="@+id/map_view"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/travelling_textView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:visibility="gone"
            android:text="@string/travelling_suggestion"/>
        <ListView
            android:id="@+id/travelling_listView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_margin="10dp"/>
    </RelativeLayout>

</LinearLayout>
